Add sequence-animation & decision component
* Refactor sequence and add sequence-animation
* Add sequence-success, work on money tracker mocks.
* Small fix for justified navs in stepper
* Add decision component
* bump package to 5.9.0

--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -1130,15 +1130,19 @@
     <input id="input-@control-label-color" type="text" value="@brand-grey-plus-10" data-var="@control-label-color" class="form-control"/>
   </div>
   <div class="col-xs-4">
+    <label for="input-@control-label-focus">@control-label-focus</label>
+    <input id="input-@control-label-focus" type="text" value="@brand-light-blue" data-var="@control-label-focus" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
     <label for="input-@control-label-font-size">@control-label-font-size</label>
     <input id="input-@control-label-font-size" type="text" value="@font-size-small" data-var="@control-label-font-size" class="form-control"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@input-group-color">@input-group-color</label>
     <input id="input-@input-group-color" type="text" aria-describedby="help-block-@input-group-color" value="@brand-smoke-minus-10" data-var="@input-group-color" class="form-control"/>
     <p id="help-block-@input-group-color" class="help-block">Color for textual input addons</p>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@input-group-addon-font-size">@input-group-addon-font-size</label>
     <input id="input-@input-group-addon-font-size" type="text" value="@input-font-size" data-var="@input-group-addon-font-size" class="form-control"/>
@@ -1148,12 +1152,12 @@
     <input id="input-@input-group-addon-bg" type="text" aria-describedby="help-block-@input-group-addon-bg" value="@input-bg" data-var="@input-group-addon-bg" class="form-control"/>
     <p id="help-block-@input-group-addon-bg" class="help-block">Background color for textual input addons</p>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@input-group-addon-border-color">@input-group-addon-border-color</label>
     <input id="input-@input-group-addon-border-color" type="text" aria-describedby="help-block-@input-group-addon-border-color" value="@input-border" data-var="@input-group-addon-border-color" class="form-control"/>
     <p id="help-block-@input-group-addon-border-color" class="help-block">Border color for textual input addons</p>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@cursor-disabled">@cursor-disabled</label>
     <input id="input-@cursor-disabled" type="text" aria-describedby="help-block-@cursor-disabled" value="not-allowed" data-var="@cursor-disabled" class="form-control"/>
@@ -2759,7 +2763,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@sequence-item-spacing-lg">@sequence-item-spacing-lg</label>
-    <input id="input-@sequence-item-spacing-lg" type="text" value="12px" data-var="@sequence-item-spacing-lg" class="form-control"/>
+    <input id="input-@sequence-item-spacing-lg" type="text" value="8px" data-var="@sequence-item-spacing-lg" class="form-control"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
