--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -65,4 +65,5 @@
 @import "sequences.less";
 @import "process.less";
 @import "droppable.less";
+@import "decision.less";
 @import "animations.less";
