--- a/less/tables.less
+++ b/less/tables.less
@@ -348,6 +348,7 @@ table {
 //
 // Specific case for rendering a calendar
 .table-calendar {
+  min-width: 300px;
   > tbody > tr > td {
     padding: 0;
     > a {
