--- a/less/variables.less
+++ b/less/variables.less
@@ -443,6 +443,7 @@
 @legend-border-color:            @input-border;
 
 @control-label-color:            @brand-grey-plus-10;
+@control-label-focus:            @brand-light-blue;
 @control-label-font-size:        @font-size-small;
 
 //** Color for textual input addons
@@ -1179,7 +1180,7 @@
 @sequence-margin-lg: 24px;
 @sequence-item-spacing-sm: 2px;
 @sequence-item-spacing-md: 4px;
-@sequence-item-spacing-lg: 12px;
+@sequence-item-spacing-lg: 8px;
 @sequence-pip-size: 8px;
 @sequence-line-width: 2px;
 
